# management-app

./: Cargo.toml  README.md  todo.norg
backend/migrations/: 20240124173356_initial.sql
backend/src/: main.rs
backend/src/controllers/: employee_controller.rs  tasks_controller.rs
backend/src/database/: employees.rs  projects.rs  tasks.rs
backend/src/database/models/: mod.rs
backend/src/handlers/: employees.rs  projects.rs  tasks.rs
backend/src/models/: mod.rs
migrations/: 20240124173356_initial.sql
src/: main.rs
src/controllers/: employee_controller.rs  mod.rs  project_controller.rs  tasks_controller.rs
src/database/: mod.rs  tasks.rs
src/database/models/: project.rs  task.rs
src/handlers/: employees.rs  mod.rs  projects.rs  tasks.rs
src/models/: employee_model.rs  mod.rs  project_model.rs  tasks_model.rs
src/rest/: employees.rs  mod.rs  projects.rs  tasks.rs
src/views/: index.html  mod.rs  script.js
